--- a/package.json
+++ b/package.json
@@ -1,66 +1,27 @@
 {
-  "name": "init-package-json",
-  "version": "4.0.1",
-  "main": "lib/init-package-json.js",
+  "name": "hello-world",
+  "version": "1.0.0",
+  "description": "The project is simple and is intended to test my git and github technical skills\r ## Built with\r   Html\r   Css\r   ## Author\r   GitHub:@torobucii",
+  "main": "index.js",
   "scripts": {
-    "test": "tap",
-    "lint": "eslint \"**/*.js\"",
-    "postlint": "template-oss-check",
-    "lintfix": "npm run lint -- --fix",
-    "snap": "tap",
-    "posttest": "npm run lint",
-    "template-oss-apply": "template-oss-apply --force"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/npm/init-package-json.git"
+    "url": "git+https://github.com/torobucci/Hello-world.git"
   },
-  "author": "GitHub Inc.",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "description": "A node module to get your node module started",
-  "dependencies": {
-    "npm-package-arg": "^10.0.0",
-    "promzard": "^0.3.0",
-    "read": "^1.0.7",
-    "read-package-json": "^6.0.0",
-    "semver": "^7.3.5",
-    "validate-npm-package-license": "^3.0.4",
-    "validate-npm-package-name": "^5.0.0"
+  "bugs": {
+    "url": "https://github.com/torobucci/Hello-world/issues"
   },
+  "homepage": "https://github.com/torobucci/Hello-world#readme",
   "devDependencies": {
-    "@npmcli/config": "^6.0.0",
-    "@npmcli/eslint-config": "^4.0.0",
-    "@npmcli/template-oss": "4.11.0",
-    "tap": "^16.0.1"
-  },
-  "engines": {
-    "node": "^14.17.0 || ^16.13.0 || >=18.0.0"
-  },
-  "tap": {
-    "statements": "94",
-    "branches": "83",
-    "lines": "94",
-    "nyc-arg": [
-      "--exclude",
-      "tap-snapshots/**"
-    ]
-  },
-  "keywords": [
-    "init",
-    "package.json",
-    "package",
-    "helper",
-    "wizard",
-    "wizerd",
-    "prompt",
-    "start"
-  ],
-  "files": [
-    "bin/",
-    "lib/"
-  ],
-  "templateOSS": {
-    "//@npmcli/template-oss": "This file is partially managed by @npmcli/template-oss. Edits may be overwritten.",
-    "version": "4.11.0"
+    "hint": "^7.1.3",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   }
 }
